; ModuleID = '/home/carl/AnghaBench/vlc/src/playlist/extr_test.c_playlist_state_init.c'
source_filename = "/home/carl/AnghaBench/vlc/src/playlist/extr_test.c_playlist_state_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.playlist_state = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.playlist_state*, i32*)* @playlist_state_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @playlist_state_init(%struct.playlist_state* %0, i32* %1) #0 {
  %3 = alloca %struct.playlist_state*, align 8
  %4 = alloca i32*, align 8
  store %struct.playlist_state* %0, %struct.playlist_state** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @vlc_playlist_Count(i32* %5)
  %7 = load %struct.playlist_state*, %struct.playlist_state** %3, align 8
  %8 = getelementptr inbounds %struct.playlist_state, %struct.playlist_state* %7, i32 0, i32 3
  store i32 %6, i32* %8, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = call i32 @vlc_playlist_GetCurrentIndex(i32* %9)
  %11 = load %struct.playlist_state*, %struct.playlist_state** %3, align 8
  %12 = getelementptr inbounds %struct.playlist_state, %struct.playlist_state* %11, i32 0, i32 2
  store i32 %10, i32* %12, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @vlc_playlist_HasPrev(i32* %13)
  %15 = load %struct.playlist_state*, %struct.playlist_state** %3, align 8
  %16 = getelementptr inbounds %struct.playlist_state, %struct.playlist_state* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 4
  %17 = load i32*, i32** %4, align 8
  %18 = call i32 @vlc_playlist_HasNext(i32* %17)
  %19 = load %struct.playlist_state*, %struct.playlist_state** %3, align 8
  %20 = getelementptr inbounds %struct.playlist_state, %struct.playlist_state* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  ret void
}

declare dso_local i32 @vlc_playlist_Count(i32*) #1

declare dso_local i32 @vlc_playlist_GetCurrentIndex(i32*) #1

declare dso_local i32 @vlc_playlist_HasPrev(i32*) #1

declare dso_local i32 @vlc_playlist_HasNext(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
